# graphics

./: .gitignore  Cargo.toml  README.md
lib/gfx/: Cargo.toml
lib/gfx/src/: derives.rs  lib.rs  mesh.rs  mesh_builder.rs  pipeline.rs  prelude.rs
lib/gfx/src/basic/: camera.rs  ebo.rs  mod.rs  shader.rs  texture.rs  vao.rs  vbo.rs
lib/gfx/src/basic/ebo/: ebo.rs  ebo_object.rs  mod.rs
lib/gfx/src/basic/shader/: mod.rs  shader.rs  shader_object.rs  shader_uniform.rs
lib/gfx/src/basic/texture/: mod.rs  texture.rs  texture_builder.rs  texture_data.rs  texture_object.rs
lib/gfx/src/basic/vao/: mod.rs  vao.rs  vao_layout.rs  vao_object.rs
lib/gfx/src/basic/vbo/: mod.rs  vbo.rs  vbo_object.rs
lib/logic/: Cargo.toml
lib/logic/src/: transform.rs
lib/macros/: Cargo.toml
lib/macros/src/: lib.rs
lib/utilis/: Cargo.toml
lib/utilis/src/: lib.rs  mem.rs
lib/utils/: Cargo.toml
lib/utils/src/: string.rs
lib/window/: Cargo.toml
lib/window/src/: application.rs  lib.rs  window.rs
res/shaders/: basic.fs  basic.vs  test.fs  test.vs
src/: main.rs
