[package]
name = "gfx"
version = "0.1.0"
authors = ["Vicix <lastapocalypse9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
log = "0.4.14"
cgmath = "0.18.0"
image = "0.23.14"

utilis = { path = "../utilis" }
logic = { path = "../logic" }
macros = { path = "../macros" }