[package]
name = "window"
version = "0.1.0"
authors = ["Vicix <lastapocalypse9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.26.0"
winit_input_helper = "0.9.0"
gl = "0.14.0"
log = "0.4.14"
simple_logger = "1.11.0"

macros = { path = "../macros" }
